# logs_core_cpp

./: CMakeLists.txt  LoggerThread.h  main.cpp
dependencies/crypto/: buildinf.h  opensslconf.h
dependencies/include/cpprest/: streams.h  version.h
dependencies/include/json/: json.hpp
dependencies/include/moodycamel/: blockingconcurrentqueue.h
